# rust-bech32

./: .gitignore  .mkchlog.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  justfile  nightly-version  rbmt-version  rbmt.toml
.cargo/: mutants.toml
.github/workflows/: changelog.yml  cron-weekly-cargo-mutants.yml  cron-weekly-update-nightly.yml  cron-weekly-update-stable.yml  fuzz.yml  rust.yml
api/: all-features.txt  alloc-only.txt  no-features.txt
bech32/: Cargo.toml
bech32/src/: internal_macros.rs  lib.rs
contrib/: semgrep.yml  test.sh
embedded/: Cargo.toml  README.md
embedded/no-allocator/: Cargo.toml  README.md
embedded/no-allocator/src/: main.rs
embedded/with-allocator/: Cargo.toml  memory.x
embedded/with-allocator/src/: main.rs
examples/: errors.rs  no_alloc_encode.rs
fuzz/: Cargo.toml  fuzz.sh
fuzz/fuzz_targets/: berlekamp_massey.rs  correct_bech32.rs  correct_codex32.rs  decode_rnd.rs  encode_decode.rs  parse_hrp.rs
src/: error.rs  hrp.rs  lib.rs  segwit.rs
src/primitives/: checksum.rs  correction.rs  decode.rs  encode.rs  field.rs  fieldvec.rs  gf32.rs  gf32_ext.rs  hrp.rs  hrpstring.rs  iter.rs  lfsr.rs  mod.rs  polynomial.rs  segwit.rs
tests/: bip_173_test_vectors.rs  bip_350_test_vectors.rs  hrpstring.rs
tests/common/: mod.rs
u5/: Cargo.toml
u5/src/: lib.rs
