[package]
name = "bech32"
version = "0.9.1"
authors = ["Clark Moody", "The rust-bitcoin developers"]
repository = "https://github.com/rust-bitcoin/rust-bech32"
documentation = "https://docs.rs/bech32/"
description = "Encodes and decodes the Bech32 format"
readme = "README.md"
keywords = ["base32", "encoding", "bech32"]
categories = ["encoding"]
license = "MIT"
edition = "2018"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

# Only for CI to make all warnings errors, do not activate otherwise (may break forward compatibility)
strict = []

[dependencies.arrayvec]
version = "0.7.1"
default-features = false
optional = true
