[package]
name = "bech32"
version = "0.11.0"
authors = ["Clark Moody", "Andrew Poelstra", "Tobin Harding"]
repository = "https://github.com/rust-bitcoin/rust-bech32"
documentation = "https://docs.rs/bech32/"
description = "Encodes and decodes the Bech32 format and implements the bech32 and bech32m checksums"
readme = "README.md"
keywords = ["base32", "encoding", "bech32", "bitcoin", "cryptocurrency"]
categories = ["encoding", "cryptography::cryptocurrencies"]
license = "MIT"
edition = "2021"
rust-version = "1.74.0"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[target.'cfg(mutate)'.dev-dependencies]
mutagen = { git = "https://github.com/llogiq/mutagen" }

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = [ 'cfg(bench)', 'cfg(kani)', 'cfg(mutate)' ] }
