[package]
name = "u5"
version = "0.1.0"
authors = ["Clark Moody", "The rust-bitcoin developers"]
repository = "https://github.com/rust-bitcoin/rust-bech32"
documentation = "https://docs.rs/u5/"
description = "5 bit integer (range 0..32)"
readme = "README.md"
keywords = ["base32", "encoding", "bech32"]
license = "MIT"
edition = "2018"

[features]
default = ["std"]
std = []
# TODO: Enable this with a build script.
rust_1_46_0 = []

# Only for CI to make all warnings errors, do not activate otherwise (may break forward compatibility)
strict = []

[dependencies]
